<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="310dp"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_gravity="start"
    android:orientation="vertical">



    <!-- 상단 타이틀 및 이메일 영역 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#767676"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/iv_drawer_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="255dp"
            android:contentDescription="@string/icon_close_desc" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="80dp" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        >

        <ImageView
            android:id="@+id/home_image"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/homeimage"
            android:contentDescription="@string/icon_home_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_text"
            style="@style/drawer_text_style"
            android:layout_width="19dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_image"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adduser_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp" >

        <ImageView
            android:id="@+id/adduser_image"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:src="@drawable/adduserimage"
            android:contentDescription="@string/icon_adduser_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/adduser_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/adduser_image"
            style="@style/drawer_text_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friendList_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp" >

        <ImageView
            android:id="@+id/friendList_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/contact"
            android:contentDescription="@string/icon_adduser_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/friendList_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_list"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/friendList_image"
            style="@style/drawer_text_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp" >

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/userimage"
            android:contentDescription="@string/icon_user_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_image"
            style="@style/drawer_text_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp" >

        <ImageView
            android:id="@+id/logout_image"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/logoutimage"
            android:contentDescription="@string/icon_logout_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/logout_image"
            style="@style/drawer_text_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>